# Cryage

./: .editorconfig  .gitignore  BRANCHING.md  CHANGELOG.md  CLAUDE.md  README.md  TRADING_SYSTEM_README.md  docker-compose.yml  dump.rdb  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  structure.txt  verify_docker_services.sh
.github/: copilot-instructions.md
.windsurf/rules/: basic.md  css.md  nextjs.md  reactstyle.md  secure-dev-python.md  typescript-utility-functions.md
app/: assistant.tsx  globals.css
app/api/chat/: route.ts
backend/: README.md  env.example  main.py  pyproject.toml  test-api-key-validation.md
backend/agents/: decision_maker.py  researcher.py  trader.py
backend/evals/: eval_agent.py
backend/memory/: memory_manager.py
backend/storage/: vector_db.py
backend/teams/: trading_team.py  trading_team_updated.py
backend/tools/: binance_tool.py  technical_analysis_tool.py
components/: app-sidebar.tsx
components/assistant-ui/: markdown-text.tsx  thread-list.tsx  thread.tsx  tool-fallback.tsx
components/ui/: cryage-logo.tsx  reasoning.tsx  settings.tsx  theme-toggle.tsx
cryage_backend/: .env.example  Dockerfile.dev  requirements.txt
cryage_backend/app/: main.py
cryage_frontend/: .env.local.example  Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/: jsrepo.json  next.config.ts  package.json  tsconfig.json  turbopack.config.js
hooks/: use-auto-thread-title.ts
lib/: thread-title-context.tsx
public/: manifest.json
scripts/: analyze-bundle.js
(+214 files in other folders)
